<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/overview_card"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:contentPadding="5dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/cor"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:text="Facts about Corona Virus"/>

            <ImageView
                android:id="@+id/pic"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"

                android:layout_below="@id/cor"
                android:layout_centerHorizontal="true"
                android:src="@drawable/covid" />
            <TextView
                android:layout_width="match_parent"
                android:textSize="23dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginTop="5dp"
                android:layout_below="@id/pic"
                android:id="@+id/well"
                android:layout_height="wrap_content"
                android:text="Overview "/>
            <TextView
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:gravity="left"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:layout_below="@id/well"
                android:id="@+id/overview_paragraph_text"
                android:layout_height="wrap_content"
                android:text="@string/overview_paragraph"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/symptoms_layout"
        android:layout_below="@id/overview_card"
        >
        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cough_card"
            app:cardCornerRadius="3dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:contentPadding="1dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/symptom_textview"
                    android:textSize="23dp"
                    android:textStyle="bold"
                    android:text="@string/symptoms_text"
                    android:textColor="#000000" />


                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/cough_textview"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:visibility="visible"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/cough_text"
                    android:layout_below="@id/cough_pic"
                    />

                <ImageView
                    android:id="@+id/cough_pic"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:paddingBottom="1dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/dry_cough"
                    android:layout_below="@id/symptom_textview"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/fever_textview"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:visibility="visible"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/fever_text"
                    android:layout_below="@id/fever_pic"
                    />

                <ImageView
                    android:id="@+id/fever_pic"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/fever_pic"
                    android:layout_below="@id/cough_textview"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/tiredness_textview"
                    android:visibility="visible"
                    android:textSize="18dp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tiredness_text"
                    android:layout_below="@id/tiredness_pic"
                    />

                <ImageView
                    android:id="@+id/tiredness_pic"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/tiredness_pic"
                    android:layout_below="@id/fever_textview"/>



            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/preventive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/symptoms_layout"
        >
        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hand_wash_card"
            app:cardCornerRadius="3dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:contentPadding="1dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/preventive_headline"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:textColor="#000000"
                    android:textSize="23dp"
                    android:text="@string/preventive_headline_text"/>


                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/hand_wash_textview"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:text="@string/wash_hands_text"
                    android:layout_below="@id/hand_wash_pic"
                    />

                <ImageView
                    android:id="@+id/hand_wash_pic"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/washing_hands"
                    android:layout_below="@id/preventive_headline"/>
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/social_dis_textview"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:text="@string/social_distancing_text"
                    android:layout_below="@id/social_dis_pic"
                    />

                <ImageView
                    android:id="@+id/social_dis_pic"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:paddingTop="20dp"
                    android:paddingRight="30dp"
                    android:paddingLeft="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/social_distancing"
                    android:layout_below="@id/hand_wash_textview"/>
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/facetouch_textview"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:text="@string/touching_text"
                    android:layout_below="@id/facetouch_pic"
                    />

                <ImageView
                    android:id="@+id/facetouch_pic"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/face_touching"
                    android:layout_below="@id/social_dis_textview"/>
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/respiratory_textview"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:text="@string/respiratory_hygiene"
                    android:layout_below="@id/respiratory_pic"
                    />

                <ImageView
                    android:id="@+id/respiratory_pic"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/respiratory_hygiene"
                    android:layout_below="@id/facetouch_textview"/>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</RelativeLayout>

</ScrollView>